--- a/references.bib
+++ b/references.bib
@@ -44,3 +44,18 @@ doi = {https://doi.org/10.1016/j.eswa.2017.03.071},
 url = {https://www.sciencedirect.com/science/article/pii/S0957417417302312},
 author = {Tellez, Eric S. and Miranda-Jiménez, Sabino and Graff, Mario and Moctezuma, Daniela and Siordia, Oscar S. and Villaseñor, Elio A.}
 }
+
+@article{Wolpert1992StackedGeneralization,
+ _url = {https://www.sciencedirect.com/science/article/pii/S0893608005800231},
+ author = {Wolpert, David H.},
+ doi = {10.1016/S0893-6080(05)80023-1},
+ issn = {0893-6080},
+ journal = {Neural Networks},
+ month = {Jan.},
+ number = {2},
+ pages = {241--259},
+ publisher = {Pergamon},
+ title = {{Stacked generalization}},
+ volume = {5},
+ year = {1992}
+}
