--- a/references.bib
+++ b/references.bib
@@ -59,3 +59,28 @@ author = {Tellez, Eric S. and Miranda-Jiménez, Sabino and Graff, Mario and Moct
  volume = {5},
  year = {1992}
 }
+
+@book{JurafskyMartin,
+   author = {Daniel Jurafsky and James H. Martin},
+   pages = {628},
+   publisher = {Draft},
+   title = {Speech and Language Processing. An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition.},
+   url = {http://www.amazon.ca/exec/obidos/redirect?tag=citeulike09-20&amp;path=ASIN/0387402721},
+   year = {2023},
+}
+
+
+@article{Salton1973,
+   abstract = {The existing practice in automatic indexing is reviewed, and it is shown that the standard theories for the specification of term values (or weights) are not adequate. New techniques are introduced for the assignment of weights to index terms, based on the characteristics of individual document collections. The effectiveness of some of the proposed methods is evaluated. © 1973, MCB UP Limited. All rights reserved.},
+   author = {Salton, Gerard and Yang, Chungshu S.},
+   doi = {10.1108/EB026562/FULL/XML},
+   issn = {00220418},
+   issue = {4},
+   journal = {Journal of Documentation},
+   month = {4},
+   pages = {351-372},
+   publisher = {MCB UP Ltd},
+   title = {On the specification of term values in automatic indexing},
+   volume = {29},
+   year = {1973},
+}
