--- a/references.bib
+++ b/references.bib
@@ -73,7 +73,7 @@ author = {Tellez, Eric S. and Miranda-Jiménez, Sabino and Graff, Mario and Moct
 @article{Salton1973,
    abstract = {The existing practice in automatic indexing is reviewed, and it is shown that the standard theories for the specification of term values (or weights) are not adequate. New techniques are introduced for the assignment of weights to index terms, based on the characteristics of individual document collections. The effectiveness of some of the proposed methods is evaluated. © 1973, MCB UP Limited. All rights reserved.},
    author = {Salton, Gerard and Yang, Chungshu S.},
-   doi = {10.1108/EB026562/FULL/XML},
+   doi = {10.1108/EB026562},
    issn = {00220418},
    issue = {4},
    journal = {Journal of Documentation},
@@ -83,4 +83,18 @@ author = {Tellez, Eric S. and Miranda-Jiménez, Sabino and Graff, Mario and Moct
    title = {On the specification of term values in automatic indexing},
    volume = {29},
    year = {1973},
+}
+
+@article{Jones1972,
+   abstract = {The exhaustivity of document descriptions and the specificity of index terms are usually regarded as independent. It is suggested that specificity should be interpreted statistically, as a function of term use rather than of term meaning. The effects on retrieval of variations in term specificity are examined, experiments with three test collections showing in particular that frequently-occurring terms are required for good overall performance. It is argued that terms should be weighted according to collection frequency, so that matches on less frequent, more specific, terms are of greater value than matches on frequent terms. Results for the test collections show that considerable improvements in performance are obtained with this very simple procedure. © 1972, MCB UP Limited},
+   author = {Sparck Jones, Karen},
+   doi = {10.1108/EB026526},
+   issn = {00220418},
+   issue = {1},
+   journal = {Journal of Documentation},
+   pages = {11-21},
+   publisher = {MCB UP Ltd},
+   title = {A statistical interpretation of term specificity and its application in retrieval},
+   volume = {28},
+   year = {1972},
 }
